5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1649_2445.log
== SUBMITION (2019-04-13 19:20:06) 
-- CODE:
escaladatemp=float(input("digite  numero"))
valordatemp=float(input("digite o numero"))
escaladatemp= escaladatemp.upper()
if (escaladatemp == "C"):
	fahrenheit= (9*escaladatemp+100)/5
	print(round(fahrenheit,2))
	else:
		celsius= (5/9+(escaladatemp-32))
		print(celsius,2)
-- EXECUTION TIME:
0.219351
-- ERROR:
  File "/home/codebench/codes/1649/2445/main.py", line 7
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:20:13) 
-- CODE:
escaladatemp=float(input("digite  numero"))
valordatemp=float(input("digite o numero"))
escaladatemp= escaladatemp.upper()
if (escaladatemp == "C"):
	fahrenheit= (9*escaladatemp+100)/5
	print(round(fahrenheit,2))
	else:
		celsius= (5/9+(escaladatemp-32))
		print(celsius,2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 19:20:40) 
-- CODE:
escaladatemp=float(input("digite  numero"))
valordatemp=float(input("digite o numero"))
escaladatemp= escaladatemp.upper()
if (escaladatemp == "C"):
	fahrenheit= (9*escaladatemp+100)/5
	print(round(fahrenheit,2))
else:
		celsius= (5/9+(escaladatemp-32))
		print(celsius,2)
-- EXECUTION TIME:
0.20153
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2445/main.py", line 1, in <module>
    escaladatemp=float(input())
ValueError: could not convert string to float: 'C'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 19:20:54) 
-- CODE:
escaladatemp=float(input("digite  numero"))
valordatemp=float(input("digite o numero"))
escaladatemp= escaladatemp.upper()
if (escaladatemp == "C"):
	fahrenheit= (9*escaladatemp+100)/5
	print(round(fahrenheit,2))
else:
	celsius= (5/9+(escaladatemp-32))
	print(celsius,2)
-- EXECUTION TIME:
0.141408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2445/main.py", line 1, in <module>
    escaladatemp=float(input())
ValueError: could not convert string to float: 'C'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 19:23:11) 
-- CODE:
escaladatemp=float(input("digite  numero"))
valordatemp=float(input("digite o numero"))
temperatura= temperatura.upper()
if (escaladatemp == "C"):
	fahrenheit= (9 * valordatemp + 100) / 5
	print(round(fahrenheit,2))
else:
	celsius= (5 / 9 + (valordatemp - 32))
	print(celsius,2)
-- EXECUTION TIME:
0.210005
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2445/main.py", line 1, in <module>
    escaladatemp=float(input())
ValueError: could not convert string to float: 'C'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:23:17) 
-- CODE:
escaladatemp=float(input("digite  numero"))
valordatemp=float(input("digite o numero"))
temperatura= temperatura.upper()
if (escaladatemp == "C"):
	fahrenheit= (9 * valordatemp + 100) / 5
	print(round(fahrenheit,2))
else:
	celsius= (5 / 9 + (valordatemp - 32))
	print(celsius,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    escaladatemp=float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:24:23) 
-- CODE:
escaladatemp=float(input("digite  a temperata em "C" ou "F"))
valordatemp=float(input("digite o numero"))
temperatura= temperatura.upper()
if (escaladatemp == "C"):
	fahrenheit= (9 * valordatemp + 100) / 5
	print(round(fahrenheit,2))
else:
	celsius= (5 / 9 + (valordatemp - 32))
	print(celsius,2)
-- ERROR:
File "XXXX", line 1
    escaladatemp=float(input("digite  a temperata em "C" ou "F"))
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:24:53) 
-- CODE:
escaladatemp=input("digite  a temperata em "C" ou "F":))
valordatemp=float(input("digite o numero"))
temperatura= temperatura.upper()
if (escaladatemp == "C"):
	fahrenheit= (9 * valordatemp + 100) / 5
	print(round(fahrenheit,2))
else:
	celsius= (5 / 9 + (valordatemp - 32))
	print(celsius,2)
-- ERROR:
File "XXXX", line 1
    escaladatemp=input("digite  a temperata em "C" ou "F":))
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:25:26) 
-- CODE:
escaladatemp=input("digite  a temperata em c ou f:))
valordatemp=float(input("digite o numero"))
temperatura= temperatura.upper()
if (escaladatemp == "C"):
	fahrenheit= (9 * valordatemp + 100) / 5
	print(round(fahrenheit,2))
else:
	celsius= (5 / 9 + (valordatemp - 32))
	print(celsius,2)
-- ERROR:
File "XXXX", line 1
    escaladatemp=input("digite  a temperata em c ou f:))
                                                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:26:11) 
-- CODE:
temperatura=input("digite  a temperata em c ou f:))
valordatemp=float(input("digite o numero"))
temperatura= temperatura.upper()
if (escaladatemp == "C"):
	fahrenheit= (9 * valordatemp + 100) / 5
	print(round(fahrenheit,2))
else:
	celsius= (5 / 9 + (valordatemp - 32))
	print(celsius,2)
-- ERROR:
File "XXXX", line 1
    temperatura=input("digite  a temperata em c ou f:))
                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:26:38) 
-- CODE:
temperatura=input("digite  a temperatura em c ou f:))
valordatemp=float(input("digite o numero"))
temperatura= temperatura.upper()
if (escaladatemp == "C"):
	fahrenheit= (9 * valordatemp + 100) / 5
	print(round(fahrenheit,2))
else:
	celsius= (5 / 9 + (valordatemp - 32))
	print(celsius,2)
-- ERROR:
File "XXXX", line 1
    temperatura=input("digite  a temperatura em c ou f:))
                                                        ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:27:14) 
-- CODE:
temperatura=input("digite  a temperatura em C ou F:")
valordatemp=float(input("digite o numero"))
temperatura= temperatura.upper()
if (escaladatemp == "C"):
	fahrenheit= (9 * valordatemp + 100) / 5
	print(round(fahrenheit,2))
else:
	celsius= (5 / 9 + (valordatemp - 32))
	print(celsius,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (escaladatemp == "C"):
NameError: name 'escaladatemp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:27:52) 
-- CODE:
temperatura=input("digite  a temperatura em C ou F:")
valordatemp=float(input("digite o numero"))
temperatura= temperatura.upper()
if (temperatura == "C"):
	fahrenheit= (9 * valordatemp + 100) / 5
	print(round(fahrenheit,2))
else:
	celsius= (5 / 9 + (valordatemp - 32))
	print(celsius,2)
-- OUTPUT:
596.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 19:28:27) 
-- CODE:
temperatura=input("digite  a temperatura em C ou F:")
valordatemp=float(input("digite o numero"))
temperatura= temperatura.upper()
if (temperatura == "C"):
	fahrenheit= (9 * valordatemp + 100) / 5
	print(round(fahrenheit,2))
else:
	celsius= (5 / 9 + (valordatemp - 32))
	print(celsius,2)
-- EXECUTION TIME:
0.217845
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
596.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
288.55555555555554 2
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
20.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 19:29:21) 
-- CODE:
temperatura=input("digite  a temperatura em C ou F:")
valordatemp=float(input("digite o numero"))
temperatura= temperatura.upper()
if (temperatura == "C"):
	fahrenheit= (9 * valordatemp + 100) / 5
	print(round(fahrenheit,2))
else:
	celsius= (5 / 9 + (valordatemp - 32))
	print(celsius,2)
-- OUTPUT:
596.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:35:31) 
-- CODE:
temperatura=input("digite  a temperatura em C ou F:")
valordatemp=float(input("digite o numero"))
temperatura= temperatura.upper()
if (temperatura == "C"):
	fahrenheit= (9 * valordatemp + 100) / 5
	print(round(fahrenheit,2))
else:
	celsius= (5 / 9 + (valordatemp - 32))
	print(celsius,2)
-- OUTPUT:
596.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:36:09) 
-- CODE:
temperatura=input("digite  a temperatura em C ou F:")
valordatemp=float(input("digite o numero"))
temperatura= temperatura.upper()
if (temperatura == "C"):
	fahrenheit= (9 * valordatemp + 100) / 5
	print(round(fahrenheit,2))
else:
	celsius= (5 / 9 + (valordatemp - 32))
	print(celsius,2)
-- EXECUTION TIME:
0.19416
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
596.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
288.55555555555554 2
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
20.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
